@@ -1,3 +1,15 @@
+2005-07-08  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
+
+	* src/termdata.cpp,
+	src/site.cpp,
+	src/mainframe.cpp,
+	src/appconfig.cpp,
+	src/pcmanx_pure_gtk2.cpp,
+	src/telnetview.cpp,
+	src/sitelistdlg.cpp,
+	src/telnetcon.cpp:
+	Add missing header inclusion.
+
 2005-07-08  Jim Huang  <jserv@kaffe.org>
 
 	* configure.ac:
